website/templates/static/items.css
.lefter {
  float:left;
  margin-bottom: 10px;
}

.righter {
  float:right;
  margin-bottom: 10px;
}

.greyed {
  background-color: LightGray;
}

.editor {
  width: 48px;
}

.deleter {
  color: red;
}

.newNameField {
  border-radius: 3px 0px 0px 3px;
  text-align: right;
  margin-right: 5px;
}

.newNameField:hover {
  border: 1px solid red;
}

.inputField {
  border-radius: 3px;
  text-align: right;
  width: 140px;
}

.inputField:hover {
  border: 1px solid red;
}

.newNameAdder {
  border-radius: 0px 4px 4px 0px;
}

.newNameAdder:hover {
  outline: 1px solid red;
}

.button {
    border-radius: 3px;
}

.button:hover {
  outline: 1px solid red;
}

.error {
  color: red;
  text-align: center;
}

.abutton {
    display: block;
    border-style: solid;
    border-width: 1px;
    padding: 4px;
    text-align: center;
    border-radius: 5px;
    color: black;
    font-weight: bold;
    margin: 1px;
}

#content {
    clear: both;
}

.choice {
    background: none;
    width: 200px;
    padding-top: 4px;
    padding-bottom: 4px;
}

.hidden {
    display: none;
}

.widther {
    width: 200px;
}

.red{
    background-color:red;
}

.shortcode-length {
    width: 100px;
}

.full_name-length {
    width: 300px;
}

.editable_field {
    padding-top: 4px;
    padding-bottom: 4px;
}

